--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body
 {
     width: 100%;
     overflow-x: hidden;
+    
+
 }
 
 p {
@@ -23,16 +25,10 @@ h1 {
 
 /* -------------------------------welcome pagev2 css --------------------------------*/
 
-#welcomeimg {
-    position: fixed;  /* fixed bg and title container won't scroll */
-    object-fit: cover;
-    width: 100%;
-}
-
 #welcomeimgcut {
     position: relative;
-    width: 100%;
-    
+    width: 100vw;
+    height: 100vh;
 }
 
 
@@ -41,22 +37,19 @@ h1 {
 }
 
 #herotitle h1 {
-    font-size: 10vw; /*use vw to make font size responsive */
+    font-size: 7vw; /*use vw to make font size responsive */
     color: white;
     text-align: center;
 }
 
 
 #herotitle2 h1 {
-    font-size: 15vw;
+    font-size: 11vw;
     color: white;
     text-align: center;
 }
 
-#cutcontainer {
-    position: relative;
-    height: 100%;
-}
+
 
 #cutcontainer p {
     position: absolute;
@@ -65,8 +58,15 @@ h1 {
     width: 100vw;
     text-align: center;
     font-size: 1.5vw;
+    
 }
 
+#cutcontainer {
+    background-image: url(images/welcome/city.jpg);
+    background-repeat: no-repeat;
+    background-size: 100vw 100%;
+    background-attachment: fixed;
+}
 
 
 /* -------------------------------chapt 0 css --------------------------------*/
