--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,9 @@ h1 {
 
 /* opening */
 #opening {
+    background-color: black;
     overflow: hidden;
+    height: 100vh !important;
 }
 
 #storycontainer {
@@ -29,27 +31,31 @@ h1 {
 }
 
 #bgimg {
-    left: 0;
-    width: 100%;
+    height: 100%;
     position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #cut {
     position: relative;
-    width: 100%;
+    height: 100%;
+    left:50%;
+    transform: translateX(-50%);
 }
 
 #heading {
     position: fixed;
-    font-size: 80px;
+    font-size: 6vw;
     color: white;
     top: 5%;
-    left: 27%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #heading2 {
     position: fixed;
-    font-size: 300px;
+    font-size: 15vw;
     color: white;
     top: 15%;
     left: 50%;
@@ -82,7 +88,6 @@ h1 {
     border-radius: 15px;
     background-color: #FDBB30;
     border: none;
-    
     padding:10px 30px;
     font-family:'PT Sans' ;
     font-weight: 800;
@@ -91,7 +96,58 @@ h1 {
 
 #beginbtn:hover {
     transition: ease-in-out 0.5s;
-    top:73%;
+    top:75%;
     box-shadow: 0px 15px orange;
 
+}
+
+/* med size devices */
+
+@media (min-width: 767.5px) and (max-width: 991.5px) {
+    #opening {
+        border: 10px red solid;
+    }
+
+    #heading {
+        font-size: 60px;
+    }
+    
+    #heading2 {
+        font-size: 250px;
+        top:10%;
+    }
+    
+    #heading3 {
+        top: 40%;
+        font-size: 30px;
+    }
+
+    #beginbtn {
+        font-size: 16px;
+        top:60%;
+    }
+}
+/* small size devices */
+
+@media (max-width: 767.5px) {
+    #heading {
+        font-size: 32px;
+    }
+    
+    #heading2 {
+        font-size: 130px;
+        top:10%;
+    }
+    
+    #heading3 {
+        top: 55%;
+        font-size: 16px;
+    }
+
+    #beginbtn {
+        font-size: 16px;
+        
+    }
+
+    
 }
